Bug 125281 - Fileopen: EMF images in prix-immobilier-friggit.doc shrunk so not correct width
Summary: Fileopen: EMF images in prix-immobilier-friggit.doc shrunk so not correct width
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.3.0 target:6.2.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Regressions-EMFPlus-Rework
  Show dependency treegraph
 
Reported: 2019-05-14 11:27 UTC by Timur
Modified: 2021-03-16 08:02 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
prix-immobilier-friggit page 6 MSO.pdf (120.13 KB, application/x-force-download)
2019-05-14 11:27 UTC, Timur
Details
prix-immobilier-friggit page 6 MSO.doc (1.72 MB, application/vnd.ms-word)
2019-05-14 11:28 UTC, Timur
Details
prix-immobilier-friggit page 6 MSO.docx (618.29 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-05-14 11:28 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2019-05-14 11:27:30 UTC
Created attachment 151399 [details]
prix-immobilier-friggit page 6 MSO.pdf

http://www.cgedd.fr/prix-immobilier-friggit.doc has or had multiple bugs. 
Current are slow perf which is bug 89331 and this one: not correct width of images on original page 6 (that's 7 in LO due to bug 86468). 

Here I attach PDF of page 6 in MSO and I'll attach DOC and DOCX of page 6 from MSO. Images that I assume are EMF are shrunk in LO. 
Tested with master 6.3+ and 6.1. Looks OK in LO 6.0 so probable regression.
Comment 1 Timur 2019-05-14 11:28:07 UTC
Created attachment 151400 [details]
prix-immobilier-friggit page 6 MSO.doc
Comment 2 Timur 2019-05-14 11:28:32 UTC
Created attachment 151401 [details]
prix-immobilier-friggit page 6 MSO.docx
Comment 3 Xisco Faulí 2019-05-14 15:14:43 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=b11188835d3b87cd9d2a8cdb3da204cfda5d3e6e

author	Miklos Vajna <vmiklos@collabora.co.uk>	2018-04-20 17:58:09 +0200
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2018-04-20 21:12:56 +0200
commit b11188835d3b87cd9d2a8cdb3da204cfda5d3e6e (patch)
tree d4c652363b1f20e7399be1fd01d74099e3aa8f3c
parent 40edbce3988946d0ffceb9554de42e1e469edd92 (diff)
DOC import: lazy-read images

Bisected with: bibisect-linux64-6.1 

Adding Cc: to Miklos Vajna
Comment 4 Commit Notification 2019-05-28 07:11:27 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/69b62cfcbd364d7f62142149c2f690104b217ca1%5E%21

tdf#125281 DOC import: fix size of lazy-loaded metafiles

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2019-05-29 15:15:09 UTC
I do confirm the issue is fixed in

Version: 6.3.0.0.alpha1+
Build ID: aa687b22991e6c674b1d8653d52fbe9a50080174
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Miklos, thanks for fixing this issue!!

OTOH, I see the file takes double the time as before. Reporting it in a follow-up bug...
Comment 6 Xisco Faulí 2019-05-29 15:42:12 UTC
The problem with the DOCX file is already reported in bug 118140
Comment 7 Commit Notification 2019-06-13 16:28:48 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/e6f0794be0bfaa55c992758a38444e1bcc481c45%5E%21

tdf#125281 DOC import: fix size of lazy-loaded metafiles

It will be available in 6.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.