tdf#125281 DOC import: fix size of lazy-loaded metafiles

Metafiles may have an external header, so once graphic data is read, we
need to set the size explicitly. Otherwise the width of the EMF image in
the bugdoc will be too small.

Change-Id: I2441eda61278b0f4973db5d9aa14618ccd17c397